# itmo-chat-bot

./: .env.example  .gitignore  MONGODB_SETUP.md  README.md  main.py  pyproject.toml  requirements.txt
data/: .gitkeep
scripts/: init_data.py
src/: __init__.py  bot.py  database.py  dialog_system.py  embeddings.py  parser.py  recommender.py  vector_db.py
