[project]
name = "chatbot-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "openai>=1.12.0",
    "pymongo>=4.6.1",
    "motor>=3.3.2",
    "python-dotenv>=1.0.0",
    "aiogram>=3.4.1",
    "aiohttp>=3.9.1",
    "sentence-transformers>=3.0.1",
    "qdrant-client>=1.12.1",
    "torch>=2.4.0",
]
